--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.thecore" "\0"
-            VALUE "FileDescription", "base_app" "\0"
+            VALUE "FileDescription", "team_ar" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "base_app" "\0"
+            VALUE "InternalName", "team_ar" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.thecore. All rights reserved." "\0"
-            VALUE "OriginalFilename", "base_app.exe" "\0"
-            VALUE "ProductName", "base_app" "\0"
+            VALUE "OriginalFilename", "team_ar.exe" "\0"
+            VALUE "ProductName", "team_ar" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
