--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,12 +50,12 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   flutter_local_notifications: ^18.0.1
   flutter_gen: ^5.8.0
+  shared_preferences: ^2.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   retrofit_generator: '>=8.0.0 <10.0.0' # for Dart 3.3 use ^9.0.0
   build_runner: ^2.3.3
-  json_serializable: ^6.8.0
   freezed: ^2.5.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -95,17 +95,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/fonts/cairo_regular.ttf
+        - asset: assets/fonts/cairo_bold.ttf
+          weight: 700
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/roboto_bold.ttf
+        - asset: assets/fonts/roboto_regular.ttf
+          weight: 700
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
