--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -13,9 +13,11 @@ if (keystorePropertiesFile.exists()) {
 android {
     namespace = "com.thecore.team_ar"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "25.1.8937393"
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
     }
@@ -38,6 +40,10 @@ android {
 
 dependencies {
     implementation("com.google.android.material:material:1.12.0")
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+
+
 }
 
 flutter {
