--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -50,13 +50,15 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   flutter_local_notifications: ^18.0.1
   flutter_gen: ^5.8.0
+  flutter_plugin_android_lifecycle: ^2.0.7
   shared_preferences: ^2.4.0
+  freezed: ^2.5.7
+  carousel_slider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   retrofit_generator: '>=8.0.0 <10.0.0' # for Dart 3.3 use ^9.0.0
   build_runner: ^2.3.3
-  freezed: ^2.5.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
