--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   youtube_player_flutter: ^9.1.1
   file_picker: ^10.1.2
   syncfusion_flutter_pdfviewer: ^29.1.38
+  flutter_native_splash: ^2.4.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
