--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,9 @@ dependencies:
   file_picker: ^10.1.2
   syncfusion_flutter_pdfviewer: ^29.1.38
   flutter_native_splash: ^2.4.4
-  timezone: ^0.10.1
+  firebase_core: ^3.13.0
+  signalr_netcore: ^1.4.3
+  firebase_messaging: ^15.2.9
   permission_handler: ^12.0.1
 dev_dependencies:
   flutter_test:
