--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   shared_preferences: ^2.4.0
   freezed: ^2.5.7
   carousel_slider: ^5.0.0
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   video_player: ^2.9.5
   youtube_player_flutter: ^9.1.1
   file_picker: ^10.1.2
@@ -64,6 +64,9 @@ dependencies:
   signalr_netcore: ^1.4.3
   firebase_messaging: ^15.2.9
   permission_handler: ^12.0.1
+  cached_network_image: ^3.4.1
+  flutter_image_compress: ^2.4.0
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
