--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   signalr_netcore: ^1.4.3
   firebase_messaging: ^15.2.9
   permission_handler: ^12.0.1
+  webview_flutter: ^4.13.0
+  encrypt: ^5.0.3
+  connectivity_plus: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
