--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   equatable: ^2.0.7
   retrofit: ^4.4.2
   pretty_dio_logger: ^1.4.0
+  reorderables: ^0.6.0
   flutter_local_notifications: ^18.0.1
   flutter_gen: ^5.8.0
   flutter_plugin_android_lifecycle: ^2.0.7
